--- a/primerpagina.html
+++ b/primerpagina.html
@@ -9,11 +9,29 @@
 			width: 150px;
 			border: 3px solid salmon;
 		}
+		.borde{
+			border-color: lightgreen;
+			background-color: violet;
+			border-style:ridge;
+		}
 	</style>
 	<body bgcolor="sky blue">
-	<h3><center>Autobiografia</center></h3>
-	<h4><center>Francisco Samueza</center></h4>
-	<center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGMKnjrwUGIdHLcPKiqXcjko9I7gAM-5-ZWw&usqp=CAU" class="imagen" ></img></center>
-	<p><center>Naci un <em>7 de octubre de 2002 </em>soy una persona normal y me gusta la programacion, <br/>dentro de 2 años voy a graduarme como tecnologo y despues seguire con mis estudios hasta poder tener un buen trabajo</center></p>
+		<h3><center>Autobiografia</center></h3>
+		<h4><center>Francisco Samueza</center></h4>
+			<center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGMKnjrwUGIdHLcPKiqXcjko9I7gAM-5-ZWw&usqp=CAU" class="imagen" ></img></center>
+		<p ><center>Naci un <em>7 de octubre de 2002 </em>soy una persona normal y me gusta la programacion, <br/>dentro de 2 años voy a graduarme como tecnologo y despues seguire con mis estudios hasta poder tener un buen trabajo</center></p>
+		<p style="color: chartreuse;">Francisco</p>
+		<table class="borde" >
+		<tr>
+		<th style="color: rgb(100, 15, 15);">Nombre </th>
+		<th style="color: rgb(100, 15, 15);">Edad</th>
+		<th style="color: rgb(100, 15, 15);">Carrera</th>
+		</tr>
+		<tr>
+		<td>Francisco</td>
+		<td>18 años</td>
+		<td>Desarrollo de Software</td>
+		</tr>
+		</table>
 	</body>
 </html>
